# k4

./: .gitignore  .k4_repo_root  .markdownlint.jsonc  .pre-commit-config.yaml  LICENSE  README.md  build_server.sh  build_server_proxy.sh  docker-compose.yaml  local_dev.backend  local_dev.frontend  local_dev.screen  package-lock.json  pyproject.toml  requirements.txt  server.py  smake  start_dev.sh  stop_dev.sh  temp.json  terminal_test.py  test.py  tts_demo.py
backend/: .dockerignore  .k4_backend_root  Dockerfile  Dockerfile.server  Dockerfile.server_proxy  README.md  pyproject.toml  start_dev.sh  stop_dev.sh  test_api_server.http
backend/backend_commons/: __init__.py  messages.py
backend/gpt_home/: chat_history.py  gpt_home.py  home_assistant_tool_store.py  vector_store.py
backend/gpt_home/utils/: __init__.py  file_io.py
backend/gpt_home/utils/ipython_utils/: quick_hass_client.py
backend/gpt_home_api_server/: __init__.py  gpt_home_api_server.py  server_commons.py  user_management.py  websocket_api_server_proxy.py
backend/server/: server.py  ws_server_proxy.py
backend/server_commons/: server_commons.py
backend/server_proxy/: ws_server_proxy.py
backend/src/backend/: connection_management.py  cyris_api_server.py  extension_management.py  gpt_home_api_server.py  main.py  message_management.py  terminal_test.py  test.py  user_management.py  websocket_api_server_proxy.py
backend/src/backend/extendables/: get_complete_chat_for_llm.py
backend/src/gpt_home/: gpt_home.py  server.py
backend/tests/: README.md
backend/user_management/: user_management.py
docs/: Notes.md
frontend/: .k4_frontend_root  Dockerfile  Dockerfile.frontend  eslint.config.cjs  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/assets/: App.css  ChatBox.css  LeftSidePanelContents.css  SignedInAs.css
frontend/src/components/: AdminPanel.tsx  ChatBox.css  ChatBox.tsx  CreateUser.tsx  LeftSidePanelContents.css  LeftSidePanelContents.tsx  MainPanelContents.tsx  MessageComponent.tsx  RightSidePanelContents.tsx  SignedInAs.css  SignedInAs.tsx  UsersList.css  UsersList.tsx
frontend/src/lib/Components/: ChatBox.svelte
frontend/src/model/: Chat.tsx  ChatListItem.tsx  Extension.tsx  Provider.tsx  Server.tsx  User.tsx
frontend/src/utils/: utils.tsx
frontend_old/: index.html  package-lock.json  package.json  vite.config.ts
frontend_old/src/: App.svelte
frontend_old/src/lib/Components/: ChatBox.svelte
frontend_old/src/lib/models/: message.ts
src/fred/: __init__.py  errors.py  fred.py  home_assistant_tool_store.py  mutable_tools_agent_executor.py  mutable_tools_openai_tools_agent.py  openai_model.py  vector_store.py
src/fred/tools/: multiply_tool.py
src/fred/utils/: __init__.py  quick_hass_client.py  save_llm_prompt.py
src/fred/utils/ipython_utils/: __init__.py  quick_hass_client.py
src/gpt_home/: gpt_home.py  home_assistant_tool_store.py  mutable_tools_agent_executor.py  vector_store.py
src/gpt_home/utils/ipython_utils/: quick_hass_client.py
stuff_that_isnt_code/docs/: dev.md  mcp.md  todos.md
