[project]
name = "gpt_home"
version = "0.0.1"
readme = "README.md"
# license = { text = "MIT License" }
dependencies = [
    "transformers[torch] >= 4.31",
    "openai >= 1.11.1",
    "pydantic >= 2.0", # for sure works with 2.6
    "rich >= 13.7", # super awesome
    "langchain >= 0.1.8", # i hate this
    "langchain-openai >= 0.0.6",
    "langchainhub >= 0.1.14",
    "HomeAssistant-API >= 4.2.2",
    "homeassistant = 2024.3.3", # needed for parsing "supported services" like this: https://github.com/home-assistant/core/blob/cabc4f797ae4f3b839e60248cb6da216acfe22b6/homeassistant/components/media_player/const.py#L178
    "fastapi >= 0.110.1",
    "uvicorn >= 0.29.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff >= 0.3.0",
    "mypy >= 1.8.0",
    "ipdb >= 0.13.13",
    "pipreqs >= 0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"gpt_home" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
ignore_missing_imports = true # necessary for `transformers`. See https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
incremental = true

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
# Homepage = "https://github.com/kddubey/pretrain-on-test"
# Repository = "https://github.com/kddubey/pretrain-on-test.git"
# Issues = "https://github.com/kddubey/pretrain-on-test/issues"
