[project]
name = "cyris_backend"
version = "0.0.1"
description = "I need to think of an appropriate description"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "backend_commons",
    "cyris",
    "utils",
    "extendables",
    "cyris-logger",
    "sentry-sdk[fastapi]>=2.20.0",
    "pydantic[email]>=2.9.2",
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.22.0",
    "python-jose[cryptography]>=3.3.0",
    "types-python-jose>=3.3.4.20240106",
    "bcrypt>=4.3.0",
    "asyncpg>=0.29.0",
    "asyncpg-stubs>=0.30.0",
    "async-property>=0.2.2",
    "gitpython>=3.1.44",
    "apluggy>=1.0.3",
    "python-multipart>=0.0.20",
]

[tool.uv.sources]
backend_commons = { workspace = true }
cyris = { workspace = true }
utils = { workspace = true }
extendables = { workspace = true }
cyris-logger = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "mypy>=1.15.0",
    "ruff>=0.6.9",
    "pre-commit>=4.1.0",
]
package = false

[tool.mypy]
strict = true
incremental = true
check_untyped_defs = true
disallow_untyped_decorators = false
follow_untyped_imports = true
namespace_packages = true
python_executable = "$CYRIS_REPO_ROOT/backend/.venv/bin/python"
