[project]
name = "k4_backend"
version = "0.0.1"
description = "I need to think of an appropriate description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["api", "fastapi>=0.111.1", "uvicorn[standard]>=0.22.0"]

[tool.uv.sources]
api = { workspace = true }
backend_commons = { workspace = true }
extensibles = { workspace = true }
k4 = { workspace = true }
k4-logger = { workspace = true }
utils = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "mypy>=1.15.0",
    "ruff>=0.6.9",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]
package = false

[tool.mypy]
strict = true
incremental = true
check_untyped_defs = true
disallow_untyped_decorators = false
follow_untyped_imports = true
namespace_packages = true
python_executable = "$K4_REPO_ROOT/backend/.venv/bin/python"
